--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </div>
         <table class="imgtable"><tbody>
             <tr>
-                <td width="20%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
+                <td width="25%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
                 <td align="left" style="padding-left:60px">
                     <p>
                         <span style="font-family:Helvetica">
                             <b>
-                                Research Engineer
+                                Research Scientist/Senior R&ampD Engineer
                                 <br>JD.com Silicon Valley Research Center
                                 <br>
                             </b>
@@ -84,9 +84,9 @@
         <h2>About Me</h2>
         <table class="imgtable"><tbody>
             <tr><td>
-                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, California. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
-                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in structure from motion, multi-view stereo, SLAM and visual data processing.
-                    I am also interested in the application of deep learning within 3D field, such as semantic shape analysis and scene understanding. Finally, I am extremely interested in kissing and hugging my cute baby.</p>
+                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, California. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
+                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in structure from motion, multi-view stereo, SLAM, image dense correspondence and fusion.
+                    I am also interested in the application of deep learning within 3D field, such as semantic shape analysis and scene understanding.</p>
             </td></tr></tbody></table>
 
         <h2>Recent News</h2>
@@ -95,6 +95,9 @@
                 <tr>
                     <td align="left">
                         <ul>
+                            <li>
+                                <p><b>[Oct. 15, 2018:]</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow">code</a> for our CVPR 2018 paper is released. Please try it and cite our paper if it is useful.</i></p>
+                            </li>
                         	<li>
                                 <p><b>[Sep. 10, 2018:]</b> <i>Out of box :), our <a href="https://github.com/yanqingan/SfM_Disambiguation" rel="nofollow">code</a> for CVPR 2017 paper is finally released. Please try it and cite our paper if it is useful.</i></p>
                             </li>
@@ -134,6 +137,7 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     <a href="./docs/cvpr18_texture.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+                                    <a href="https://github.com/fdp0525/G2LTex" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b></a>&nbsp;
                                 </p>
                             </li>
                         </ul>
@@ -317,7 +321,7 @@
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on Sep-12-2018 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on Oct-15-2018 by Qingan Yan.</p>
 </div>
 </div>
 </div>
