--- a/index.html
+++ b/index.html
@@ -96,22 +96,25 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <p><b>[Oct. 15, 2018:]</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow">code</a> for our CVPR 2018 paper is released. Please try it and cite our paper if it is useful.</i></p>
+                                <p><b>[Oct. 15, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow">project</a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts are released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></p>
                             </li>
                         	<li>
-                                <p><b>[Sep. 10, 2018:]</b> <i>Out of box :), our <a href="https://github.com/yanqingan/SfM_Disambiguation" rel="nofollow">code</a> for CVPR 2017 paper is finally released. Please try it and cite our paper if it is useful.</i></p>
+                                <p><b>[Sep. 10, 2018]:</b> <i>Out of box :), our <a href="https://github.com/yanqingan/SfM_Disambiguation" rel="nofollow">code</a> for CVPR 2017 paper is finally released. I modified it in order to be contribution-independent and easily-accessible. Please try it and cite our paper if it is useful.</i></p>
                             </li>
                             <li>
-                                <p><b>[Apr. 01, 2018:]</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018.</i></p>
+                                <p><b>[Apr. 01, 2018]:</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018.</i></p>
                             </li>
                             <li>
-                                <p><b>[Nov. 07, 2017:]</b> <i>I will join JD.com Silicon Valley Research Center as a computer vision scientist.</i></p>
+                                <p><b>[Nov. 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a computer vision scientist.</i></p>
                             </li>
                             <li>
-                                <p><b>[May. 30, 2017:]</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
+                                <p><b>[Jun. 30, 2017]:</b> <i>I finish my PhD studing at Wuhan University.</i></p>
                             </li>
                             <li>
-                                <p><b>[Apr. 15, 2017:]</b> <i>Our paper on structure from motion is accepted to CVPR 2017.</i></p>
+                                <p><b>[May. 30, 2017]:</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
+                            </li>
+                            <li>
+                                <p><b>[Apr. 15, 2017]:</b> <i>Our work on Structure-from-Motion disambiguation is accepted to CVPR 2017.</i></p>
                             </li>
                         </ul>
                     </td>
@@ -304,10 +307,11 @@
 </tbody>
 </table>
 
-<h2>Resources</h2>
+<h2>My Resources</h2>
 <table class="imgtable"><tbody>
 <tr>
 <td align="left">
+    <h4>3D Vision Tools</h4>
 <ul>
 	<li><p><a href="https://github.com/yanqingan/SfM_Viewer" rel="nofollow"><b>SfM_Viewer Software</b></a> <br><i>A software can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
 	</li>
@@ -321,7 +325,7 @@
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on Oct-15-2018 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on Oct-22-2018 by Qingan Yan.</p>
 </div>
 </div>
 </div>
