--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2>About Me</h2>
         <table class="imgtable"><tbody>
             <tr><td>
-                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, California. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
+                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
                 <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in structure from motion, multi-view stereo, SLAM, image dense correspondence and fusion.
                     I am also interested in the application of deep learning within 3D field, such as semantic shape analysis and scene understanding.</p>
             </td></tr></tbody></table>
