--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <p><b>[Oct. 15, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow">project</a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts are released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></p>
+                                <p><b>[Oct. 15, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow">project</a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></p>
+                            </li>
+                            <li>
+                                <p><b>[Sep. 18, 2018]:</b> <i>I uploaded the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow">code</a> for our TIP 2017 work. Please try it and cite our paper if it is useful.</i></p>
                             </li>
                         	<li>
                                 <p><b>[Sep. 10, 2018]:</b> <i>Out of box :), our <a href="https://github.com/yanqingan/SfM_Disambiguation" rel="nofollow">code</a> for CVPR 2017 paper is finally released. I modified it in order to be contribution-independent and easily-accessible. Please try it and cite our paper if it is useful.</i></p>
@@ -139,8 +142,8 @@
                                     <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Salt Lake City, USA, 2018: 4645-4653.</i>
                                 </p>
                                 <p style="padding-top:10px">
-                                    <a href="./docs/cvpr18_texture.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
-                                    <a href="https://github.com/fdp0525/G2LTex" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b></a>&nbsp;
+                                    <!--<a href="./docs/cvpr18_texture.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->
+                                    <a href="https://github.com/fdp0525/G2LTex" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> <b><u>Project Website</u></b></a>&nbsp;
                                 </p>
                             </li>
                         </ul>
@@ -160,7 +163,7 @@
 	                          <p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
 	                              <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>, 2018, 24(2): 1190-1203.</i></p>
                             <p style="padding-top:10px">
-	                              <a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+	                              <!--<a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->
                             </p>
                         </li>
                     </ul>
@@ -177,10 +180,11 @@
                 <td align="left">
                     <ul>
 	                      <li><p><a href="./docs/tip17_illumination.pdf" class="text-black"><b>Illumination Decomposition for Photograph with Multiple Light Sources</b></a></p>
-	<p>Ling Zhang, <b>Qingan Yan</b>, Zheng Liu, Hua Zou and Chunxia Xiao<br>
-	<i>IEEE Transactions on Image Processing <b>(TIP)</b>, 2017, 26(9): 4114-4127. </i></p>
+	                        <p>Ling Zhang, <b>Qingan Yan</b>, Zheng Liu, Hua Zou and Chunxia Xiao<br>
+	                        <i>IEEE Transactions on Image Processing <b>(TIP)</b>, 2017, 26(9): 4114-4127. </i></p>
 <p style="padding-top:10px">
-    <a href="./docs/tip17_illumination.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+    <!--<a href="./docs/tip17_illumination.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->
+    <a href="https://github.com/yanqingan/Illumination_Decomposition" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> <b><u>Project Website</u></b></a>&nbsp;
 </p>
 </li>
 </ul>
@@ -200,8 +204,8 @@
 	<p><b>Qingan Yan</b>, Long Yang, Ling Zhang and Chunxia Xiao<br>
 	    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Honolulu, USA, 2017: 3836-3844. (Spotlight Oral) </i></p>
 <p style="padding-top:10px">
-<a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
-<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b></a>&nbsp;
+<!--<a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->
+<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> <b><u>Project Website</u></b></a>&nbsp;
 </p>
 </li>
 </ul>
@@ -221,7 +225,7 @@
 	<p>Long Yang, <b>Qingan Yan</b> and Chunxia Xiao<br>
 	<i>The Visual Computer <b>(TVC)</b>, 2017, 33(3): 385-398.</i></p>
 <p style="padding-top:10px">
-<a href="./docs/tvc16_shape.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;			
+<!--<a href="./docs/tvc16_shape.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->		
 </p>
 </li>
 </ul>
@@ -241,7 +245,7 @@
 <p><b>Qingan Yan</b>, Long Yang, Chao Liang, Huajun Liu, Ruimin Hu and Chunxia Xiao<br>
 <i>Computer Graphics Forum <b>(CGF)</b>, 2016, 35(7): 1-10. (Proceedings of Pacific Graphics 2016)</i></p>
 <p style="padding-top:10px">
-	<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+	<!--<a href="./docs/pg16_geometrically.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->
 	<!--<a class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Code (coming soon) </a>&nbsp;-->
 </p>
 </li>
@@ -262,7 +266,7 @@
 	<p><b>Qingan Yan</b>, Zhan Xu and Chunxia Xiao<br>
 	<i>Computer Graphics Forum <b>(CGF)</b>, 2014, 33(7): 339-348. (Proceedings of Pacific Graphics 2014)</i></p>
 <p style="padding-top:10px">
-<a href="./docs/pg14_fast.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+<!--<a href="./docs/pg14_fast.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->
 </p>
 </li>
 </ul>
@@ -311,11 +315,11 @@
 <table class="imgtable"><tbody>
 <tr>
 <td align="left">
-    <h4>3D Vision Tools</h4>
+    <h4><b>3D Vision Tools</b></h4>
 <ul>
-	<li><p><a href="https://github.com/yanqingan/SfM_Viewer" rel="nofollow"><b>SfM_Viewer Software</b></a> <br><i>A software can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
+	<li><p><a href="https://github.com/yanqingan/SfM_Viewer" rel="nofollow">SfM_Viewer Software (QT &amp C++)</a> <br><i>The software can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
 	</li>
-	<li><p><a href="https://github.com/yanqingan/Binocular_Measurer" rel="nofollow"><b>Binocular_Measurer Software</b></a> <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
+	<li><p><a href="https://github.com/yanqingan/Binocular_Measurer" rel="nofollow">Binocular_Measurer Software (VS &amp C++)</a> <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
 	</li>
 </ul>
 </td>
@@ -325,7 +329,7 @@
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on Oct-22-2018 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on Oct-26-2018 by Qingan Yan.</p>
 </div>
 </div>
 </div>
