--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <table class="imgtable"><tbody>
             <tr><td>
                 <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
-                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in structure from motion, multi-view stereo, SLAM, image dense correspondence and fusion.
-                    I am also interested in the application of deep learning within 3D field, such as semantic shape analysis and scene understanding.</p>
+                <p>My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in structure from motion, multi-view stereo, SLAM, image dense correspondence and fusion.
+                    I am also interested in the application of deep learning within 3D scenes, such as semantic shape analysis and geometry understanding.</p>
             </td></tr></tbody></table>
 
         <h2>Recent News</h2>
@@ -111,7 +111,7 @@
                                 <p><b>[Nov. 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a computer vision scientist.</i></p>
                             </li>
                             <li>
-                                <p><b>[Jun. 30, 2017]:</b> <i>I finish my PhD studing at Wuhan University.</i></p>
+                                <p><b>[Jun. 30, 2017]:</b> <i>I finished my PhD studying at Wuhan University.</i></p>
                             </li>
                             <li>
                                 <p><b>[May. 30, 2017]:</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
