--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2>About Me</h2>
         <table class="imgtable"><tbody>
             <tr><td>
-                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
+                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in 2017.</p>
                 <p>My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in structure from motion, multi-view stereo, SLAM, image dense correspondence and fusion.
                     I am also interested in the application of deep learning within 3D scenes, such as semantic shape analysis and geometry understanding.</p>
             </td></tr></tbody></table>
@@ -317,9 +317,9 @@
 <td align="left">
     <h4><b>3D Vision Tools</b></h4>
 <ul>
-	<li><p><a href="https://github.com/yanqingan/SfM_Viewer" rel="nofollow">SfM_Viewer Software (QT &amp C++)</a> <br><i>The software can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
+	<li><p><a href="https://github.com/yanqingan/SfM_Viewer" rel="nofollow">SfM_Viewer (QT &amp C++)</a> <br><i>The code can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
 	</li>
-	<li><p><a href="https://github.com/yanqingan/Binocular_Measurer" rel="nofollow">Binocular_Measurer Software (VS &amp C++)</a> <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
+	<li><p><a href="https://github.com/yanqingan/Binocular_Measurer" rel="nofollow">Binocular_Measurer (VS &amp C++)</a> <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
 	</li>
 </ul>
 </td>
