--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Texture Mapping for 3D Reconstruction with RGB-D Sensor</b></a> <img src="./figures/new_animated.gif" \=""></p>
+                                <p><a href="./docs/cvpr18_texture.pdf" class="text-black"><b>Texture Mapping for 3D Reconstruction with RGB-D Sensor</b></a> <img src="./figures/new_animated.gif" \=""></p>
                                 <p>
                                     Yanping Fu, <b>Qingan Yan</b>, Long Yang, Jie Liao and Chunxia Xiao<br>
                                     <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Salt Lake City, USA, 2018: 4645-4653.</i>
