--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
             </tbody>
         </table>
 
-        <h1>About Me</h1>
+        <h1 style="font-size:24px">About Me</h1>
         <table class="imgtable">
             <tbody>
                 <tr>
                     <td>
-                        <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in 2017.</p>
+                        <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.</p>
                         <p style="font-family:Helvetica">
-                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in structure from motion, multi-view stereo, SLAM, image dense correspondence and fusion.
-                            I am also interested in geometric deep learning, such as 3D scene understanding, guided shape recovery and unstructured data organizing.
+                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, SLAM, image dense correspondence and fusion</i>.
+                            I am also interested in <i>geometric deep learning</i>, such as 3D scene understanding, guided shape recovery and unstructured data organizing.
                         </p>
                     </td>
                 </tr>
             </tbody>
         </table>
 
-        <h1>Recent News</h1>
+        <h1 style="font-size:24px">Recent News</h1>
         <table class="imgtable">
             <tbody>
                 <tr>
@@ -102,7 +102,7 @@
             </tbody>
         </table>
 
-        <h1>Publications</h1>
+        <h1 style="font-size:24px">Publications</h1>
 
         <table class="imgtable">
             <tbody>
@@ -287,7 +287,7 @@
             </tbody>
         </table>
 
-        <h1>Patents</h1>
+        <h1 style="font-size:24px">Patents</h1>
         <table class="imgtable">
             <tbody>
                 <tr>
@@ -304,7 +304,7 @@
             </tbody>
         </table>
 
-        <h1>My Resources</h1>
+        <h1 style="font-size:24px">My Resources</h1>
         <table class="imgtable">
             <tbody>
                 <tr>
