--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <td>
                         <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.</p>
                         <p style="font-family:Helvetica">
-                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, SLAM, image dense correspondence and fusion</i>.
+                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, SLAM, 2D&amp3D correspondence and fusion</i>.
                             I am also interested in <i>geometric deep learning</i>, such as 3D scene understanding, guided shape recovery and unstructured data organizing.
                         </p>
                     </td>
