--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -58,8 +58,8 @@
                     <td>
                         <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.</p>
                         <p style="font-family:Helvetica">
-                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, SLAM, 2D&amp3D correspondence and fusion</i>.
-                            I am also interested in <i>geometric deep learning</i>, such as 3D scene understanding, guided shape recovery and unstructured data organizing.
+                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, SLAM, 2D&amp3D correspondence and image&ampgeometry fusion</i>.
+                            I am also interested in <i>geometric deep learning</i>, such as 3D scene perception, guided shape recovery and unstructured data representation.
                         </p>
                     </td>
                 </tr>
