--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Oct. 15, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>project</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></pstyle="font-family:Helvetica">
+                                <p style="font-family:Helvetica"><b>[Oct. 01, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>project</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Sep. 18, 2018]:</b> <i>I uploaded the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> for our TIP 2017 work. Please try it and cite our paper if it is useful.</i></p>
+                                <p style="font-family:Helvetica"><b>[Sep. 10, 2018]:</b> <i>I uploaded the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> for our TIP 2017 work. Please try it and cite our paper if it is useful.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Sep. 10, 2018]:</b> <i>Out of box :), our <a href="https://github.com/yanqingan/SfM_Disambiguation" rel="nofollow"><u>code</u></a> for CVPR 2017 paper is finally released. I modified it in order to be contribution-independent and easily-accessible. Please try it and cite our paper if it is useful.</i></p>
+                                <p style="font-family:Helvetica"><b>[Aug. 07, 2018]:</b> <i>Out of box :), our <a href="https://github.com/yanqingan/SfM_Disambiguation" rel="nofollow"><u>code</u></a> for CVPR 2017 paper is finally released. I modified it in order to be contribution-independent and easily-accessible. Please try it and cite our paper if it is useful.</i></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica"><b>[Apr. 01, 2018]:</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018.</i></p>
