--- a/index.html
+++ b/index.html
@@ -294,10 +294,40 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <p style="font-family:Helvetica"><b>Optical Multi-touch Point Detection Method Based on Visual Attention Model (in Chinese)</b></p>
+                                <p style="font-family:Helvetica">
+                                    <b>
+                                        Pixel-level Point Cloud Densification Method for Geometric Clue Perception in Three-dimensional Scene Reconstruction
+                                        (in <a href="https://patents.google.com/patent/CN107610219A/en">English</a> &amp <a href="https://patents.google.com/patent/CN107610219A/zh">Chinese</a>)
+                                    </b>
+                                </p>
+                                <p style="font-family:Helvetica">Chunxia Xiao, <b>Qingan Yan</b> (<i>CN107610219A, application, Jan/19/2018</i>)</p>
+                            </li>
+                            <li style="padding-top:10px">
+                                <p style="font-family:Helvetica"><b>Optical Multi-touch Contact Detection Method Based on Visual Attention Model (in <a href="https://patents.google.com/patent/CN102855025B/en">English</a> &amp <a href="https://patents.google.com/patent/CN102855025B/zh">Chinese</a>)</b></p>
                                 <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, granted, Jun/17/2015</i>)</p>
                             </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
+        <h1 style="font-size:24px">Professional Activities</h1>
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td align="left">
+                        <p style="font-family:Helvetica"><b>Journal Reviewer</b></p>
+                        <ul>
+                            <li>
+                                <p style="font-family:Helvetica">IEEE Transactions on Image Processing <a href="https://mc.manuscriptcentral.com/tip-ieee">(TIP)</a></p>
+                            </li>
+                        </ul>
+                        <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
+                        <ul>
+                            <li>
+                                <p style="font-family:Helvetica">CVPR <a href="http://cvpr2019.thecvf.com/">2019</a></p>
+                            </li>
                         </ul>
                     </td>
                 </tr>
@@ -312,10 +342,10 @@
                         <p style="font-family:Helvetica"><b>3D Vision Tools</b></p>
                         <ul>
                             <li>
-                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/SfM_Viewer">SfM Viewer (QT &amp C++)</a> <br><i>The code can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
+                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/SfM_Viewer">SfM Viewer</a> (QT &amp C++) <br><i>The code can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Binocular_Measurer">Binocular Measurer (VS &amp C++)</a> <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
+                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Binocular_Measurer">Binocular Measurer</a> (Visual Stdio &amp C++) <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
                             </li>
                         </ul>
                     </td>
