--- a/index.html
+++ b/index.html
@@ -322,6 +322,9 @@
                             <li>
                                 <p style="font-family:Helvetica">IEEE Transactions on Image Processing <a href="https://mc.manuscriptcentral.com/tip-ieee">(TIP)</a></p>
                             </li>
+                            <li>
+                            <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
+                            </li>
                         </ul>
                         <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
                         <ul>
