--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿
+
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -58,8 +58,8 @@
                     <td>
                         <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.</p>
                         <p style="font-family:Helvetica">
-                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, SLAM, 2D&amp3D correspondence and image&ampgeometry fusion</i>.
-                            I am also interested in <i>geometric deep learning</i>, such as 3D scene perception, guided shape recovery and unstructured data representation.
+                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, depth estimation, novel-view synthesis, dense correspondence and visual fusion</i>.
+                            I am also interested in geometric deep learning, such as <i>3D scene perception, guided shape recovery and unstructured data representation</i>.
                         </p>
                     </td>
                 </tr>
@@ -325,6 +325,9 @@
                             <li>
                             <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
                             </li>
+                            <li>
+                            <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
+                            </li>
                         </ul>
                         <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
                         <ul>
@@ -358,7 +361,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Oct-26-2018 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jan-20-2019 by Qingan Yan.</p>
             </div>
         </div>
     </div>
