--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <tbody>
                 <tr>
                     <td>
-                        <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.</p>
+                    <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>human shaping and clothing fitting</i>.</p>
                         <p style="font-family:Helvetica">
-                            My work focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, depth estimation, novel-view synthesis, dense correspondence and visual fusion</i>.
+                            My interests primarily focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, visual fusion, dense correspondence and relighting</i>.
                             I am also interested in geometric deep learning, such as <i>3D scene perception, guided shape recovery and unstructured data representation</i>.
                         </p>
                     </td>
@@ -300,11 +300,11 @@
                                         (in <a href="https://patents.google.com/patent/CN107610219A/en">English</a> &amp <a href="https://patents.google.com/patent/CN107610219A/zh">Chinese</a>)
                                     </b>
                                 </p>
-                                <p style="font-family:Helvetica">Chunxia Xiao, <b>Qingan Yan</b> (<i>CN107610219A, application, Jan/19/2018</i>)</p>
+                                <p style="font-family:Helvetica">Chunxia Xiao, <b>Qingan Yan</b> (<i>CN107610219A, pending, Jan/19/2018</i>)</p>
                             </li>
                             <li style="padding-top:10px">
                                 <p style="font-family:Helvetica"><b>Optical Multi-touch Contact Detection Method Based on Visual Attention Model (in <a href="https://patents.google.com/patent/CN102855025B/en">English</a> &amp <a href="https://patents.google.com/patent/CN102855025B/zh">Chinese</a>)</b></p>
-                                <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, granted, Jun/17/2015</i>)</p>
+                                <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, issued, Jun/17/2015</i>)</p>
                             </li>
                         </ul>
                     </td>
