--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </span>
                         </p>
                         <p style="padding-top:8px">
-                            [<a href="./docs/qingan_yan_phd_cv_2018_10.pdf"><u>Curriculum Vitae</u></a>]
+                            [<a href="./docs/qingan_yan_phd_cs_2019_01.pdf"><u>Curriculum Vitae</u></a>]
                         </p>
                     </td>
                 </tr>
@@ -187,7 +187,7 @@
                             <li>
                                 <h3 style="font-family:Helvetica"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></h3>
                                 <p style="font-family:Helvetica"><b>Qingan Yan</b>, Long Yang, Ling Zhang, Chunxia Xiao</p>
-                                <p style="font-family:Helvetica"><i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017. <b>(Spotlight Oral)</b></i></p>
+                                <p style="font-family:Helvetica"><i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017. <b>(<a href="https://www.youtube.com/watch?v=eEfi6GsBBP8">Spotlight Oral</a>)</b></i></p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cvpr17_distinguishing.pdf"><u>PDF</u></a>]&nbsp;
                                     [<a href="https://github.com/yanqingan/SfM_Disambiguation"><u>Code on Github</u></a>]
@@ -232,7 +232,7 @@
                             <li>
                                 <h3 style="font-family:Helvetica"><b>Geometrically Based Linear Iterative Clustering for Quantitative Feature Correspondence</b></h3>
                                 <p style="font-family:Helvetica"><b>Qingan Yan</b>, Long Yang, Chao Liang, Huajun Liu, Ruimin Hu, Chunxia Xiao</p>
-                                <p style="font-family:Helvetica"><i>Computer Graphics Forum <b>(CGF)</b>, 2016. (Proceedings of Pacific Graphics 2016)</i></p>
+                                <p style="font-family:Helvetica"><i>Computer Graphics Forum <b>(CGF)</b>, 2016. (<a href="https://indico.oist.jp/indico/event/0/">Proceedings of Pacific Graphics 2016</a>)</i></p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/pg16_geometrically.pdf"><u>PDF</u></a>]
                                 </p>
@@ -254,7 +254,7 @@
                             <li>
                                 <h3 style="font-family:Helvetica"><b>Fast Feature-Oriented Visual Connection for Large Image Collections</b></h3>
                                 <p style="font-family:Helvetica"><b>Qingan Yan</b>, Zhan Xu, Chunxia Xiao</p>
-                                <p style="font-family:Helvetica"><i>Computer Graphics Forum <b>(CGF)</b>, 2014. (Proceedings of Pacific Graphics 2014)</i></p>
+                                <p style="font-family:Helvetica"><i>Computer Graphics Forum <b>(CGF)</b>, 2014. (<a href="http://graphics.ewha.ac.kr/PG14/">Proceedings of Pacific Graphics 2014</a>)</i></p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/pg14_fast.pdf"><u>PDF</u></a>]
                                 </p>
@@ -304,13 +304,14 @@
                             </li>
                             <li style="padding-top:10px">
                                 <p style="font-family:Helvetica"><b>Optical Multi-touch Contact Detection Method Based on Visual Attention Model (in <a href="https://patents.google.com/patent/CN102855025B/en">English</a> &amp <a href="https://patents.google.com/patent/CN102855025B/zh">Chinese</a>)</b></p>
-                                <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, issued, Jun/17/2015</i>)</p>
+                                <p style="font-family:Helvetica">Yadong Wu, <b>Qingan Yan</b>, Zhiqin Liu (<i>CN102855025B, granted, Jun/17/2015</i>)</p>
                             </li>
                         </ul>
                     </td>
                 </tr>
             </tbody>
         </table>
+        
 
         <h1 style="font-size:24px">Professional Activities</h1>
         <table class="imgtable">
@@ -323,16 +324,19 @@
                                 <p style="font-family:Helvetica">IEEE Transactions on Image Processing <a href="https://mc.manuscriptcentral.com/tip-ieee">(TIP)</a></p>
                             </li>
                             <li>
-                            <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
+                                <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
                             </li>
                             <li>
-                            <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
+                                <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
                             </li>
                         </ul>
                         <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
                         <ul>
                             <li>
                                 <p style="font-family:Helvetica">CVPR <a href="http://cvpr2019.thecvf.com/">2019</a></p>
+                            </li>
+                            <li>
+                            <p style="font-family:Helvetica">ICCV <a href="http://iccv2019.thecvf.com/">2019</a></p>
                             </li>
                         </ul>
                     </td>
@@ -351,7 +355,7 @@
                                 <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/SfM_Viewer">SfM Viewer</a> (QT &amp C++) <br><i>The code can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Binocular_Measurer">Binocular Measurer</a> (Visual Stdio &amp C++) <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
+                                <p style="font-family:Helvetica"><a href="https://github.com/yanqingan/Binocular_Measurer">Binocular Measurer</a> (Visual Studio &amp C++) <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
                             </li>
                         </ul>
                     </td>
@@ -361,7 +365,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jan-20-2019 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Feb-01-2019 by Qingan Yan.</p>
             </div>
         </div>
     </div>
