--- a/index.html
+++ b/index.html
@@ -327,6 +327,9 @@
                                 <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
                             </li>
                             <li>
+                            <p style="font-family:Helvetica">IEEE Transactions on Cybernetics <a href="https://mc.manuscriptcentral.com/cyb-ieee">(TCYB)</a></p>
+                            </li>
+                            <li>
                                 <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
                             </li>
                         </ul>
