--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -38,8 +38,7 @@
                                 <b>Office:</b> 675E Middlefield Rd, Mountain View, CA, 94043<br>
                                 <b>Links:</b> <a href="https://github.com/yanqingan">GitHub</a> |
                                 <a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en">Google Scholar</a> |
-                                <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a> |
-                                <a href="http://blog.csdn.net/yanqingan/">CSDN (in Chinese)</a>
+                                <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a>
                                 <br>
                             </span>
                         </p>
@@ -72,6 +71,9 @@
                 <tr>
                     <td align="left">
                         <ul>
+                            <li>
+                                <p style="font-family:Helvetica"><b>[May. 01, 2019]:</b> <i> Two papers are accepted to Computer Graphics International 2019 and will be published soon in The Visual Computer.</i></p>
+                            </li>
                             <li>
                                 <p style="font-family:Helvetica"><b>[Oct. 01, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>project</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></p>
                             </li>
@@ -327,10 +329,13 @@
                                 <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
                             </li>
                             <li>
-                            <p style="font-family:Helvetica">IEEE Transactions on Cybernetics <a href="https://mc.manuscriptcentral.com/cyb-ieee">(TCYB)</a></p>
+                                <p style="font-family:Helvetica">IEEE Transactions on Cybernetics <a href="https://mc.manuscriptcentral.com/cyb-ieee">(TCYB)</a></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica">Concurrency and Computation: Practice and Experience <a href="https://mc.manuscriptcentral.com/cpe">(CPE)</a></p>
                             </li>
                         </ul>
                         <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
