--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <p style="font-family:Helvetica"><b>[May. 01, 2019]:</b> <i> Two papers are accepted to Computer Graphics International 2019 and will be published soon in The Visual Computer.</i></p>
+                                <p style="font-family:Helvetica"><b>[May. 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published soon in The Visual Computer.</i></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica"><b>[Oct. 01, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>project</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></p>
@@ -105,6 +105,62 @@
         </table>
 
         <h1 style="font-size:24px">Publications</h1>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/cgi19_joint.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica"><b>Joint Bilateral Propagation Upsampling for Unstructured Multi-view Stereo</b></h3>
+                                <p style="font-family:Helvetica">
+                                    Mengqiang Wei, <b>Qingan Yan</b>, Fei Luo, Chengfang Song, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>The Visual Computer <b>(TVC)</b>, 2019. (<a href="http://www.cgs-network.org/cgi19/">Proceedings of Computer Graphics International 2019</a>)</i>
+                                </p>
+                                </p>
+                                <!--<p style="padding-top:10px">
+                                [<a href="./docs/cvpr18_texture.pdf"><u>PDF</u></a>]&nbsp;
+                                [<a href="https://github.com/fdp0525/G2LTex"><u>Code on Github</u></a>]
+                                </p>-->
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/cgi19_effective.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica"><b>Effective Shadow Removal via Multi-scale Image Decomposition</b></h3>
+                                <p style="font-family:Helvetica">
+                                    Ling Zhang, <b>Qingan Yan</b>, Yao Zhu, Xiaolong Zhang, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>The Visual Computer <b>(TVC)</b>, 2019. (<a href="http://www.cgs-network.org/cgi19/">Proceedings of Computer Graphics International 2019</a>)</i>
+                                </p>
+                                </p>
+                                <!--<p style="padding-top:10px">
+                                    [<a href="./docs/cvpr18_texture.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="https://github.com/fdp0525/G2LTex"><u>Code on Github</u></a>]
+                                </p>-->
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <table class="imgtable">
             <tbody>
@@ -327,6 +383,9 @@
                             </li>
                             <li>
                                 <p style="font-family:Helvetica">IEEE Transactions on Multimedia <a href="https://mc.manuscriptcentral.com/tmm-ieee">(TMM)</a></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica">IEEE Transactions on Circuits and Systems for Video Technology <a href="https://mc.manuscriptcentral.com/tcsvt">(TCSVT)</a></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica">IEEE Transactions on Cybernetics <a href="https://mc.manuscriptcentral.com/cyb-ieee">(TCYB)</a></p>
