--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </span>
                         </p>
                         <p style="padding-top:8px">
-                            [<a href="./docs/qingan_yan_phd_cs_2019_01.pdf"><u>Curriculum Vitae</u></a>]
+                            [<a href="./docs/qingan_yan_cs_phd.pdf"><u>Curriculum Vitae</u></a>]
                         </p>
                     </td>
                 </tr>
@@ -123,10 +123,10 @@
                                     <i>The Visual Computer <b>(TVC)</b>, 2019. (<a href="http://www.cgs-network.org/cgi19/">Proceedings of Computer Graphics International 2019</a>)</i>
                                 </p>
                                 </p>
-                                <!--<p style="padding-top:10px">
-                                [<a href="./docs/cvpr18_texture.pdf"><u>PDF</u></a>]&nbsp;
-                                [<a href="https://github.com/fdp0525/G2LTex"><u>Code on Github</u></a>]
-                                </p>-->
+                                <p style="padding-top:10px">
+                                    [<a href="./docs/cgi19_joint.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cgi19_joint_sub.pdf"><u>Supplemental Material</u></a>]
+                                </p>
                             </li>
                         </ul>
                     </td>
@@ -151,10 +151,10 @@
                                     <i>The Visual Computer <b>(TVC)</b>, 2019. (<a href="http://www.cgs-network.org/cgi19/">Proceedings of Computer Graphics International 2019</a>)</i>
                                 </p>
                                 </p>
-                                <!--<p style="padding-top:10px">
-                                    [<a href="./docs/cvpr18_texture.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="https://github.com/fdp0525/G2LTex"><u>Code on Github</u></a>]
-                                </p>-->
+                                <p style="padding-top:10px">
+                                    [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="./docs/cgi19_effective_sub.pdf"><u>Supplemental Material</u></a>]
+                                </p>
                             </li>
                         </ul>
                     </td>
