--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <p>
                             <span style="font-family:Helvetica">
                                 <b>
-                                    Research Scientist/Senior R&ampD Engineer
+                                    Research Scientist
                                     <br>JD.com Silicon Valley Research Center
                                     <br>
                                 </b>
@@ -56,7 +56,7 @@
                     <td>
                     <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>human shaping and clothing fitting</i>.</p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, visual fusion, dense correspondence and relighting</i>.
+                            My interests primarily focus on the field of 3D reconstruction and multi-view geometry. In particular, I tackle the challenges in <i>structure from motion, RGB-D fusion, dense correspondence and image synthesis</i>.
                             I am also interested in geometric deep learning, such as <i>3D scene perception, guided shape recovery and unstructured data representation</i>.
                         </p>
                     </td>
@@ -393,6 +393,9 @@
                                 <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
                             </li>
                             <li>
+                                <p style="font-family:Helvetica">Journal of Electronic Imaging <a href="https://jei.msubmit.net/cgi-bin/main.plex?form_type=home">(JEI)</a></p>
+                            </li>
+                            <li>
                                 <p style="font-family:Helvetica">Concurrency and Computation: Practice and Experience <a href="https://mc.manuscriptcentral.com/cpe">(CPE)</a></p>
                             </li>
                         </ul>
@@ -431,7 +434,7 @@
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Feb-01-2019 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jun-01-2019 by Qingan Yan.</p>
             </div>
         </div>
     </div>
