--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <tbody>
                 <tr>
                     <td>
-                    <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>human shaping and clothing fitting</i>.</p>
+                    <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>virtual human shaping and clothing fitting</i>.</p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of 3D reconstruction and multi-view geometry. In particular, I tackle the challenges in <i>structure from motion, RGB-D fusion, dense correspondence and image synthesis</i>.
-                            I am also interested in geometric deep learning, such as <i>3D scene perception, guided shape recovery and unstructured data representation</i>.
+                            My interests primarily focus on the field of 3D computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, RGB-D fusion, depth estimation, shape approximation and image synthesis</i>.
+                            I am also interested in 3D deep learning, such as <i>3D scene perception, guided object recovery and unstructured shape representation</i>.
                         </p>
                     </td>
                 </tr>
