--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <td>
                     <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>virtual human shaping and clothing fitting</i>.</p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of 3D computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, RGB-D fusion, depth estimation, shape approximation and image synthesis</i>.
-                            I am also interested in 3D deep learning, such as <i>3D scene perception, guided object recovery and unstructured shape representation</i>.
+                            My interests primarily focus on the field of 3D computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
+                            I am also interested in 3D deep learning, such as <i>3D scene perception, guided shape recovery and unstructured data representation</i>.
                         </p>
                     </td>
                 </tr>
@@ -405,7 +405,16 @@
                                 <p style="font-family:Helvetica">CVPR <a href="http://cvpr2019.thecvf.com/">2019</a></p>
                             </li>
                             <li>
-                            <p style="font-family:Helvetica">ICCV <a href="http://iccv2019.thecvf.com/">2019</a></p>
+                                <p style="font-family:Helvetica">ICCV <a href="http://iccv2019.thecvf.com/">2019</a></p>
+                            </li>
+                        </ul>
+                        <p style="font-family:Helvetica"><b>Presentations</b></p>
+                        <ul>
+                            <li>
+                                <p style="font-family:Helvetica">CVPR <a href="https://www.youtube.com/watch?v=eEfi6GsBBP8">2017</a></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica">Pacific Graphics <a href="http://graphics.ewha.ac.kr/PG14/">2014</a>, <a href="https://indico.oist.jp/indico/event/0/">2016</a></p>
                             </li>
                         </ul>
                     </td>
